<resources>
    <string name="app_name">Craft</string>
    <string name="ic_logotype">logotype</string>
    <string name="ic_email">icon_email</string>
    <string name="ic_lock">icon_lock</string>
    <string name="ic_camera">ic_camera</string>
    <string name="ic_cross">ic_cross</string>
    <string name="ic_heart">ic_heart</string>
    <string name="ic_home">ic_home</string>
    <string name="ic_settings">ic_settings</string>
    <string name="ic_shopping">ic_shopping</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="rep_password">Повторите пароль</string>
    <string name="ic_back">Назад</string>
    <string name="choice">Выбор клуба</string>
    <string name="favourites">Избранное</string>
    <string name="icon_heart">Кнопка сердце</string>
    <string name="icon_home">Кнопка дом</string>
    <string name="icon_profil">Кнопка профиль</string>
    <string name="icon_check">icon_check</string>
    <string name="scroll_choice">Скрол выбора</string>
    <string name="vyzanie">Клуб вязания и шитья</string>
    <string name="kylinariy">Клуб кулинарии</string>
    <string name="gonchar">Клуб гончарного мастерства</string>
    <string name="chitateli">Клуб читателей</string>
    <string name="risovaniy">Клуб рисования</string>
    <string name="kvilling">Квиллинг</string>
    <string name="sadavod">Клуб садоводов</string>
    <string name="skrapbuking">Скрапбукинг</string>
    <string name="bronirovat">Бронировать</string>
    <string name="bron">Бронь</string>
    <string name="data">Выбрать дату</string>
    <string name="history">История броней</string>
    <string name="settings">Настройки</string>
    <string name="change_password">Смена пароля</string>
    <string name="old_password">Введите старый пароль</string>
    <string name="new_password">Введите новый пароль</string>
    <string name="again">Еще раз</string>
    <string name="save">Сохранить</string>
    <string name="time">Время</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="active_order">Активен</string>
    <string name="your_order">Ваш заказ</string>
    <string name="place_an_order">Оформить заказ</string>
    <string name="news_menu">Новости</string>
    <string name="menu_menu">Меню</string>
    <string name="geo_menu">Карта</string>
    <string name="user_menu">Кабинет</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="forget_pass">Забыли пароль?</string>
    <string name="sign_in_with">Войти с помощью</string>
    <string name="vkontakte">Вконтакте</string>
    <string name="google">Google</string>
    <string name="pass_recovery">Восстановление пароля</string>
    <string name="code_from_message">Код из сообщения</string>
    <string name="code">Код</string>
    <string name="pass_confirm">Подтверждение пароля</string>
    <string name="recovery">Восстановить</string>
    <string name="addresses">Наши адреса</string>
    <string name="season_menu">Сезонное</string>
    <string name="liked_menu">Избранное</string>
    <string name="classic_menu">Стандарт</string>
    <string name="baked_menu">Выпечка</string>
    <string name="news">Новости</string>
    <string name="person">Личный кабинет</string>
    <string name="person_name_and_firstname">Name Firstname</string>
    <string name="person_phone_number">+7 (999) 999-99-99</string>
    <string name="loyalty_program">Программа лояльности</string>
    <string name="orders_history">История заказов</string>
    <string name="exit">Выйти</string>
    <string name="order_number_text">Заказ №</string>
    <string name="num_order">0000001</string>
    <string name="product">Товар</string>
    <string name="cost">Цена</string>
    <string name="list_product">Капучино\nЛатте\nКруасан</string>
    <string name="list_cost">200p\n180p\n59p</string>
    <string name="final_cost">Общая стоимость</string>
    <string name="num_final_cost">439p</string>
    <string name="name_product">Капучино</string>
    <string name="cost_name_product">100p</string>
    <string name="add_in_cart">Добавить в корзину</string>
    <string name="add_in_liked">Добавить в избранное</string>
    <string name="name_menu_elem">Name Menu Element</string>
    <string name="choose_syrup">Выберите сироп</string>
    <string name="back">Назад</string>
    <string name="description">Описание</string>
    <string name="name_news">Новости</string>
    <string name="date_news">date</string>
    <string name="information_of_loyalty">Программа лояльности — система поощрения
        постоянных покупателей: за приверженность компании
        клиенты получают скидки и бонусы. </string>
    <string name="close">Закрыть</string>
    <string name="firstname">Фамилия</string>
    <string name="date_birthday">Дата рождения</string>
    <string name="final_reg">Зарегистрироваться</string>
    <string name="menu_elem_counter">1</string>
    <string name="news_description">Описание новости</string>
    <string name="news_header">Заголовок новости</string>
    <string name="final_int_cost">0p</string>
    <string name="pay">Оплатить</string>
    <string name="cart">Корзина</string>
    <string name="syrop">Сироп:</string>
    <string name="cost_with_dvoetochie">Стоимость:</string>
    <string name="final_cart_cost">21313p</string>
    <string name="witpout_syrop">Без сиропа</string>
    <string name="Email">Почта</string>

</resources>